--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,3 @@
-# kitty.conf - Paleta violeta oscura + neón
-
-# === Fuente ===
 font_family Raleway
 font_size 10
 
@@ -9,30 +6,30 @@ background_opacity 0.6
 cursor_opacity 0.8
 
 # === Colores ===
-foreground #D8BFD8
-background #1A0F2A
-cursor #BB33FF
+foreground #FFFFFF
+background #000000
+cursor #C800FF
 
-selection_foreground #FFFFFF
-selection_background #5D3FD3
+selection_foreground #000000
+selection_background #B266FF
 
-color0  #1A0F2A
-color1  #BF00FF
-color2  #6A0DAD
-color3  #9B30FF
-color4  #4B0082
-color5  #AA00FF
-color6  #551A8B
-color7  #D8BFD8
+color0  #000000
+color1  #FF4B8C
+color2  #A1FF4B
+color3  #D1FF72
+color4  #7D4BFF
+color5  #C800FF
+color6  #4BFFE1
+color7  #E0E0E0
 
-color8  #4B004B
-color9  #D100FF
-color10 #7F00FF
-color11 #C299FF
-color12 #5F00FF
-color13 #E0B0FF
-color14 #8A2BE2
-color15 #F3E6FF
+color8  #3A3A3A
+color9  #FF79B0
+color10 #C7FF87
+color11 #EEFFAA
+color12 #A97FFF
+color13 #E07BFF
+color14 #7FFFF1
+color15 #FFFFFF 
 
 # === Cursor ===
 cursor_shape block
