Optimizing the Hyprland config

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,7 @@
-preload = /home/GibbyArch/.config/hypr/Wallpapers/WaguriKaoruko2.jpg
-wallpaper = eDP-1,/home/GibbyArch/.config/hypr/Wallpapers/WaguriKaoruko2.jpg
+preload = /home/GibbyArch/.config/hypr/Wallpapers/alya.jpg
+wallpaper = eDP-1,/home/GibbyArch/.config/hypr/Wallpapers/alya.jpg
+preload = ~/.config/hypr/Wallpapers/alya.jpg
+wallpaper = DP-3,~/.config/hypr/Wallpapers/alya.jpg
+preload = /home/GibbyArch/.config/hypr/Wallpaper/alya.jpg
+wallpaper = HDMI-A-1,/.config/hypr/Wallpapers/alya.jpg
 splash = true
