kitty conf actiualized and aded some options

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,15 +1,42 @@
+# =============================
+#        CONFIGURACIÓN BASE
+# =============================
 font_family Raleway
+bold_font auto
+italic_font auto
 font_size 10
+adjust_line_height 0
+adjust_column_width 0
 
-# === Transparencia ===
-background_opacity 0.6
-cursor_opacity 0.8
+# =============================
+#         RENDIMIENTO
+# =============================
+repaint_delay 8
+input_delay 1
+sync_to_monitor yes
+enable_audio_bell no
+window_alert_on_bell no
+detect_urls yes
+clipboard_control write-clipboard write-primary read-clipboard read-primary
+term xterm-kitty
 
-# === Colores ===
+# =============================
+#          APARIENCIA
+# =============================
 foreground #FFFFFF
 background #000000
+background_opacity 0.75
 cursor #C800FF
+cursor_text_color #000000
+cursor_opacity 0.8
+cursor_shape block
+cursor_blink_interval 0.6
+cursor_beam_thickness 2
+cursor_stop_blinking_after 5.0
 
+# =============================
+#            COLORES
+# =============================
 selection_foreground #000000
 selection_background #B266FF
 
@@ -21,7 +48,6 @@ color4  #7D4BFF
 color5  #C800FF
 color6  #4BFFE1
 color7  #E0E0E0
-
 color8  #3A3A3A
 color9  #FF79B0
 color10 #C7FF87
@@ -29,31 +55,105 @@ color11 #EEFFAA
 color12 #A97FFF
 color13 #E07BFF
 color14 #7FFFF1
-color15 #FFFFFF 
-
-# === Cursor ===
-cursor_shape block
-cursor_blink_interval 0.6
-cursor_beam_thickness 2
-
-# === Scrollback ===
-scrollback_lines 10000
-
-# === Mouse ===
-mouse_hide_wait 3000
-mouse_hide_threshold 3
-
-# === Otras mejoras ===
-map ctrl+shift+c copy_to_clipboard
-map ctrl+shift+v paste_from_clipboard
-
-padding_width 8
-padding_height 8
-
-# === Paleta de colores ectra === #
+color15 #FFFFFF
 color16 #FF00FF
 color17 #00FFFF
 color18 #FF0066
 color19 #6600FF
 color20 #FFFF00
 color21 #00FF00
+
+# =============================
+#         FONDO IMAGEN
+# =============================
+background_image Kitty.jpg
+background_image_layout scaled
+background_image_linear
+background_image_opacity 0.35
+background_tint 0.1
+background_image_alignment center
+
+# =============================
+#           SCROLLBACK
+# =============================
+scrollback_lines 10000
+scrollback_pager less +G -R
+scrollback_fill_enlarged_window yes
+
+# =============================
+#             MOUSE
+# =============================
+mouse_hide_wait 3000
+mouse_hide_threshold 3
+copy_on_select yes
+strip_trailing_spaces smart
+
+# =============================
+#           PADDING
+# =============================
+window_padding_width 8
+window_padding_height 8
+window_margin_width 0
+window_border_width 0
+
+# =============================
+#           COMPORTAMIENTO
+# =============================
+confirm_os_window_close 0
+allow_remote_control yes
+remember_window_size no
+initial_window_width 90c
+initial_window_height 30c
+placement_strategy center
+
+# =============================
+#           MAPAS TECLAS
+# =============================
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
+map ctrl+shift+t new_tab
+map ctrl+shift+w close_tab
+map ctrl+shift+n new_window
+map ctrl+shift+, prev_tab
+map ctrl+shift+. next_tab
+map ctrl+shift+f1 show_kitty_doc
+map ctrl+shift+equal increase_font_size
+map ctrl+shift+minus decrease_font_size
+map ctrl+shift+backspace reset_font_size
+map ctrl+shift+s launch --type overlay kitty +kitten ssh
+
+# =============================
+#           PESTAÑAS
+# =============================
+tab_bar_edge bottom
+tab_bar_min_tabs 1
+tab_bar_style powerline
+active_tab_font_style bold
+inactive_tab_font_style normal
+tab_title_template "{index}: {title}"
+
+# =============================
+#         EXPERIENCIA UX
+# =============================
+shell_integration enabled
+enable_audio_bell no
+visual_bell_duration 0.15
+touch_scroll_multiplier 1.2
+click_interval 0.25
+
+# =============================
+#        TWEAKS VISUALES
+# =============================
+background_tint 0.12
+inactive_text_alpha 0.7
+window_logo_path none
+draw_minimal_borders yes
+hide_window_decorations no
+resize_in_steps no
+
+# =============================
+#        OPCIONES EXTRA
+# =============================
+editor codium
+copy_text_to_selection_buffer yes
+linux_display_server wayland
